# Proyecto-POO

./: Almacen.cpp  CMakeLists.txt  ModeloUML.mdj  Plan de trabajo.xlsx  Presentacion.pptx  README.md  SpreadsheetResponsabilidades.md  casilla.cpp  casilla.h  main.cpp  producto.cpp  producto.h  robot.cpp  robot.h  slot.cpp  slot.h  tipos.h
archivos/:  slot.cpp  Almacen.h  CMakeLists.txt  Preset.cpp  almacen.cpp  almacen.h  casilla.cpp  casilla.h  funciones.h  main.cpp  preset.cpp  producto.cpp  producto.h  robot.cpp  robot.h  slot.cpp  slot.h  tipos.h
