# CMakeList.txt: proyecto de CMake para main
#
cmake_minimum_required (VERSION 3.8)

# Agregue un origen al ejecutable de este proyecto.
add_executable (CMakeProject1 "main.cpp" "Almacen.cpp" "tipos.h" "casilla.cpp" "robot.cpp" "slot.cpp")

# TODO: Agregue pruebas y destinos de instalación si es necesario.
